- build output pane auto scrolls     - this was conflicting with the registered filter 'ansi-to-html' for omni output. - highlight errors in output pane (these are added with the text-error class for consistency, currently this is red, for readability we might want to leave it a neutral color and decorate with an icon on the left?) - bug fix: build process can output more than one error message at a time, so output is now being parsed line by line to avoid chunks being treated as same error accidentally.

--- a/stylesheets/omnisharp-atom.less
+++ b/stylesheets/omnisharp-atom.less
@@ -87,7 +87,6 @@
 
   pre {
     background: #161719;
-    color: #fff;
     font-size: 10px;
     margin: 0px;
     padding: 0px;
